<resources>
    <string name="app_name">Simple Calculator</string>
    <string name="seven">7</string>
    <string name="all_clear">Ac</string>
    <string name="four">4</string>
    <string name="one">1</string>
    <string name="minus_plus">-/+</string>
    <string name="zero">0</string>
    <string name="two">2</string>
    <string name="five">5</string>
    <string name="eight">8</string>
    <string name="bracket">( )</string>
    <string name="delete">DEL</string>
    <string name="multiple">x</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="equal">=</string>
    <string name="nine">9</string>
    <string name="six">6</string>
    <string name="three">3</string>
    <string name="dot">.</string>
    <string name="zero_hint_txt">00.00</string>
    <string name="division">÷</string>
</resources>